--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 </head>
 <body>
-    <div class="output"></div>
+    <div class="lang"></div>
     <!-- /.output -->
     <script src="dist/dev-bundle.js"></script>
 </body>
