--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <title>js testing</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon/favicon.ico" type="image/x-icon" />
 </head>
 <body>
+    <h1 class="title">Testing app !</h1>
     <div class="lang"></div>
     <!-- /.output -->
-    <script src="dist/dev-bundle.js"></script>
 </body>
 </html>
